| Summary: | ASTERISK-27356: [patch] libsrtp-2.x.x + AES-GCM support | ||||
| Reporter: | Alexander Traud (traud) | Labels: | patch | ||
| Date Opened: | 2017-10-18 03:18:12 | Date Closed: | 2017-10-18 19:52:10 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Resources/res_srtp | ||
| Versions: | 14.6.0 15.0.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) libSRTP_2_x_x+GCM.patch | |||
| Description: | Since ASTERISK-26976, libSRTP 2.x.x can be linked. However, the user might have linked libSRTP to OpenSSL. In that case, libSRTP supports AES-GCM which is auto-detected since ASTERISK-26190. Then, two additional DEFINEs are accessed in libSRTP. However, those were not covered by ASTERISK-26976 and therefore Asterisk does not compile when libSRTP 2.x.x with AES-GCM is present:
{code} [CC] res_srtp.c -> res_srtp.o res_srtp.c: In function ‘res_sdp_crypto_parse_offer’: res_srtp.c:901:22: error: ‘AES_128_GCM_KEYSIZE_WSALT’ undeclared (first use in this function) key_len_expected = AES_128_GCM_KEYSIZE_WSALT; ^~~~~~~~~~~~~~~~~~~~~~~~~ res_srtp.c:901:22: note: each undeclared identifier is reported only once for each function it appears in res_srtp.c:906:22: error: ‘AES_256_GCM_KEYSIZE_WSALT’ undeclared (first use in this function) key_len_expected = AES_256_GCM_KEYSIZE_WSALT; ^~~~~~~~~~~~~~~~~~~~~~~~~ Makefile.rules:149: recipe for target 'res_srtp.o' failed make[1]: *** [res_srtp.o] Error 1 Makefile:367: recipe for target 'res' failed make: *** [res] Error 2 {code} | ||||
| Comments: | By: Friendly Automation (friendly-automation) 2017-10-18 10:49:22.425-0500 Change 6825 merged by Jenkins2: res_srtp: Add support for libsrtp2 with AES-GCM. [https://gerrit.asterisk.org/6825|https://gerrit.asterisk.org/6825] By: Friendly Automation (friendly-automation) 2017-10-18 10:49:24.130-0500 Change 6826 merged by Jenkins2: res_srtp: Add support for libsrtp2 with AES-GCM. [https://gerrit.asterisk.org/6826|https://gerrit.asterisk.org/6826] By: Friendly Automation (friendly-automation) 2017-11-06 11:30:11.989-0600 Change 6994 merged by Jenkins2: install_prereq: Checkout of libSRTP 2.x. [https://gerrit.asterisk.org/6994|https://gerrit.asterisk.org/6994] By: Friendly Automation (friendly-automation) 2017-11-06 11:51:30.723-0600 Change 6995 merged by Joshua Colp: install_prereq: Checkout of libSRTP 2.x. [https://gerrit.asterisk.org/6995|https://gerrit.asterisk.org/6995] By: Friendly Automation (friendly-automation) 2017-11-06 11:58:46.735-0600 Change 6993 merged by Joshua Colp: install_prereq: Checkout of libSRTP 2.x. [https://gerrit.asterisk.org/6993|https://gerrit.asterisk.org/6993] By: Alexander Traud (traud) 2018-01-11 13:30:31.591-0600 This feature is not available in Asterisk 13. It was added with Asterisk 15. Therefore, the target cannot be 13.19. By: Asterisk Team (asteriskteam) 2018-01-11 13:30:31.896-0600 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. By: Joshua C. Colp (jcolp) 2018-01-11 13:42:13.325-0600 You referenced this issue in a commit message to 13, so it was automatically included by the script against that release. By: Alexander Traud (traud) 2018-01-11 13:47:17.969-0600 Ahh. The commit message for the install_prereq mention the wrong issue. Should not have been this one here but ASTERISK-26976. | ||||